k8s/players-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: players-service
spec:
  selector:
    app: players-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
