k8s/selection-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selection-service
spec:
  selector:
    app: selection-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
