k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: football-ingress
spec:
  rules:
  - http:
      paths:
      - path: /players
        pathType: Prefix
        backend:
          service:
            name: players-service
            port:
              number: 8000
      - path: /selections
        pathType: Prefix
        backend:
          service:
            name: selection-service
            port:
              number: 8000
